Updated Mailpit util test classes
- Removed MailpitContainerStarter.java, because this class is no longer
used.